--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8674,205 +8674,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #2c5f2c; }
+  background: #3e879f; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #1a079c; }
+  background: #e0637b; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #cf6374; }
+  background: #982466; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #e76754; }
+  background: #b2228b; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #65c15f; }
+  background: #147711; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #c32273; }
+  background: #d1c9cb; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #af8d8c; }
+  background: #598890; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #a8aedc; }
+  background: #cd20a7; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #14d24c; }
+  background: #c34562; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #155d85; }
+  background: #827093; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #04d8a8; }
+  background: #2020af; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #7690ec; }
+  background: #24e678; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #50d915; }
+  background: #8019bf; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #67cacf; }
+  background: #049bee; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #6dbd38; }
+  background: #fb67f3; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #085d68; }
+  background: #a70fe5; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #24f3a1; }
+  background: #460920; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #c75d47; }
+  background: #efe969; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #549307; }
+  background: #17e445; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #14b82c; }
+  background: #d0291c; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #63b68c; }
+  background: #4d05b4; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #64ad73; }
+  background: #aadce8; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #5cc034; }
+  background: #c3d560; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #696f3d; }
+  background: #975640; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #ea3139; }
+  background: #f390e2; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #45f62f; }
+  background: #1f6efd; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #66f79c; }
+  background: #0125b5; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #5a72c0; }
+  background: #b34e5b; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #905652; }
+  background: #dc17a5; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #6d9c4a; }
+  background: #56f1ba; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #481c79; }
+  background: #d544f9; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #31fd20; }
+  background: #805168; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #459f87; }
+  background: #e17904; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #0781bb; }
+  background: #8ba6c7; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #18b26e; }
+  background: #a7a896; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #7c9c5b; }
+  background: #b60496; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #dfeac1; }
+  background: #1daa6d; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #f59516; }
+  background: #89324a; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #cbef95; }
+  background: #21972b; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #1e08de; }
+  background: #0158b5; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #735686; }
+  background: #ef5fc4; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #cfdd60; }
+  background: #512a40; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #91ddfa; }
+  background: #921f62; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #3ec35c; }
+  background: #1f9720; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #1a3592; }
+  background: #8195dc; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #5551b3; }
+  background: #fc6cc5; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #49feae; }
+  background: #c470cf; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #5ff6ba; }
+  background: #cb3311; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #220888; }
+  background: #462e8e; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #429cab; }
+  background: #b3c020; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #119168; }
+  background: #34f7f8; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #b14873; }
+  background: #7945bb; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #9be05d; }
+  background: #0c57af; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #742ce9; }
+  background: #f6efbc; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #6188ad; }
+  background: #402543; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #a3a1a6; }
+  background: #55c0a0; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #2a4df7; }
+  background: #93a239; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #990540; }
+  background: #cf9f0d; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #594be3; }
+  background: #898f8b; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #6f818b; }
+  background: #f66b6c; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #5286d8; }
+  background: #fece75; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #e1c89f; }
+  background: #1a032c; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #a86b32; }
+  background: #cc630e; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #ce39d7; }
+  background: #3a278b; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #1726cf; }
+  background: #68be0f; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #0b9c5e; }
+  background: #90b353; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #6a80c5; }
+  background: #8b060e; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #dc8f91; }
+  background: #e16434; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #87ad9e; }
+  background: #4f1f16; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #16fbc9; }
+  background: #1a3868; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #cff1ee; }
+  background: #2abaa2; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #70e165; }
+  background: #0180e1; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #93175b; }
+  background: #fc931e; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #33cc68; }
+  background: #25d7e1; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #d54cc3; }
+  background: #d31cce; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #c3d14b; }
+  background: #73552d; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #faa5d1; }
+  background: #6ccaae; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #bd5e43; }
+  background: #5ee067; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #5c92f3; }
+  background: #63577f; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #49a764; }
+  background: #025799; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #871bcd; }
+  background: #8a4b9a; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #0693c5; }
+  background: #9a19a6; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #561d20; }
+  background: #ed7aa3; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #2f2fec; }
+  background: #2475a8; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #80ce7b; }
+  background: #566a9f; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #6d041b; }
+  background: #6727c9; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #259ebc; }
+  background: #4a69d1; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #de26bc; }
+  background: #f77720; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #7884a9; }
+  background: #765849; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #230eae; }
+  background: #6c7779; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #d12909; }
+  background: #3a5394; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #5599e7; }
+  background: #c9faa8; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #0e4be0; }
+  background: #34d1fb; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #62f6cc; }
+  background: #27e3e9; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #9a3c54; }
+  background: #d591dc; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #5eb19a; }
+  background: #93594e; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #fe7ec5; }
+  background: #e6b178; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #be741f; }
+  background: #d3d9c6; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #bd790b; }
+  background: #a116bd; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #e5eac7; }
+  background: #c83fac; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -13009,6 +13009,78 @@ td .check-container {
         width: 300px; }
       .query-wizard-exp-contents .query-wizard-expension .dropdown-with-img {
         width: 106px; } }
+.page-border-none {
+  margin-left: 0px;
+  border: 0px solid #ccc;
+  padding: 10px;
+  border-radius: 5px;
+  background: none;
+  color: #9DA6AF;
+  width: 65px; }
+
+.cursor-pointer {
+  cursor: pointer; }
+
+.filter-date-picker {
+  align-items: center; }
+
+.filter-date-picker .Connectors-top-searchbar-div {
+  margin-right: 15px;
+  margin-top: 0px;
+  margin-bottom: 0px; }
+
+.device-detail-adapter-connection-tab {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  align-items: center; }
+
+.device-detail-ac-title {
+  font-size: 22px;
+  text-transform: capitalize; }
+
+.device-detail-ac-img {
+  width: 40px !important; }
+
+.selected-tab-text[_ngcontent-wrg-c22]:focus {
+  outline: 0px #dcdde1 !important; }
+
+.tabs-aggre .nav-link button,
+.tabs-aggre .nav-link {
+  border: 0px solid #dcdde1 !important; }
+
+button:focus,
+input:focus,
+select:focus {
+  outline: 0px dotted !important;
+  outline: 0px auto -webkit-focus-ring-color !important; }
+
+button {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  outline: 0px solid #5e5e5e !important;
+  -webkit-box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.2); }
+
+.device-disclosure .device-box-logo {
+  width: auto !important;
+  text-align: right; }
+
+.flex-align-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center; }
+
+.dashboard-search {
+  width: 100%;
+  margin-right: 10px; }
+
+.dashboard-search-select select {
+  border: none;
+  padding: 12px; }
+
 @media screen and (max-width: 767px) {
   .dashboard-container
   .dashboard-widget-container {
