--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8674,205 +8674,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #3e879f; }
+  background: #8a17fa; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #e0637b; }
+  background: #49114e; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #982466; }
+  background: #45c71f; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #b2228b; }
+  background: #b9156e; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #147711; }
+  background: #53ab0b; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #d1c9cb; }
+  background: #d288e0; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #598890; }
+  background: #4d16a1; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #cd20a7; }
+  background: #a90585; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #c34562; }
+  background: #0159bb; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #827093; }
+  background: #021b18; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #2020af; }
+  background: #754a45; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #24e678; }
+  background: #13934e; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #8019bf; }
+  background: #de78dd; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #049bee; }
+  background: #e8929c; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #fb67f3; }
+  background: #eecb7f; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #a70fe5; }
+  background: #8ff7ae; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #460920; }
+  background: #79b9e1; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #efe969; }
+  background: #6c428a; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #17e445; }
+  background: #98ca17; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #d0291c; }
+  background: #d484e8; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #4d05b4; }
+  background: #6742f5; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #aadce8; }
+  background: #4daf3b; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #c3d560; }
+  background: #796c3d; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #975640; }
+  background: #f92d1c; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #f390e2; }
+  background: #57c9dd; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #1f6efd; }
+  background: #1a292a; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #0125b5; }
+  background: #3fcde2; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #b34e5b; }
+  background: #fb7262; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #dc17a5; }
+  background: #cc6d2d; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #56f1ba; }
+  background: #f0c4c1; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #d544f9; }
+  background: #658b6b; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #805168; }
+  background: #ff1357; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #e17904; }
+  background: #ab0bea; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #8ba6c7; }
+  background: #58206f; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #a7a896; }
+  background: #b733d7; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #b60496; }
+  background: #cf2b44; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #1daa6d; }
+  background: #64f5d6; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #89324a; }
+  background: #111309; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #21972b; }
+  background: #f73023; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #0158b5; }
+  background: #a1b33e; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #ef5fc4; }
+  background: #4f962c; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #512a40; }
+  background: #3e5616; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #921f62; }
+  background: #76d0ac; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #1f9720; }
+  background: #dfa47d; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #8195dc; }
+  background: #336525; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #fc6cc5; }
+  background: #af54fe; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #c470cf; }
+  background: #efd237; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #cb3311; }
+  background: #546433; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #462e8e; }
+  background: #0c18cb; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #b3c020; }
+  background: #a962eb; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #34f7f8; }
+  background: #a0d81a; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #7945bb; }
+  background: #c69ac8; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #0c57af; }
+  background: #43dc34; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #f6efbc; }
+  background: #ae0d1b; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #402543; }
+  background: #c3a024; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #55c0a0; }
+  background: #37cf32; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #93a239; }
+  background: #43b71d; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #cf9f0d; }
+  background: #6d0b07; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #898f8b; }
+  background: #669a60; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #f66b6c; }
+  background: #c893dd; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #fece75; }
+  background: #8a027b; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #1a032c; }
+  background: #ad9e73; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #cc630e; }
+  background: #cfc270; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #3a278b; }
+  background: #706f58; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #68be0f; }
+  background: #4fc616; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #90b353; }
+  background: #f54c77; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #8b060e; }
+  background: #23c18e; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #e16434; }
+  background: #b7657a; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #4f1f16; }
+  background: #c488fa; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #1a3868; }
+  background: #67f98e; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #2abaa2; }
+  background: #c05512; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #0180e1; }
+  background: #28fac4; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #fc931e; }
+  background: #b12762; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #25d7e1; }
+  background: #cdedc8; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #d31cce; }
+  background: #8f4b80; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #73552d; }
+  background: #b3488e; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #6ccaae; }
+  background: #853111; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #5ee067; }
+  background: #7be23f; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #63577f; }
+  background: #21c78b; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #025799; }
+  background: #e8ee32; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #8a4b9a; }
+  background: #7f1dbc; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #9a19a6; }
+  background: #254671; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #ed7aa3; }
+  background: #a00eea; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #2475a8; }
+  background: #7a5101; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #566a9f; }
+  background: #e407fb; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #6727c9; }
+  background: #215d4f; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #4a69d1; }
+  background: #75f562; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #f77720; }
+  background: #ffccc4; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #765849; }
+  background: #93a215; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #6c7779; }
+  background: #602423; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #3a5394; }
+  background: #c9368f; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #c9faa8; }
+  background: #31327c; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #34d1fb; }
+  background: #f8aae7; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #27e3e9; }
+  background: #0b1708; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #d591dc; }
+  background: #8a1098; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #93594e; }
+  background: #c4f445; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #e6b178; }
+  background: #309c7a; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #d3d9c6; }
+  background: #434c65; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #a116bd; }
+  background: #180b94; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #c83fac; }
+  background: #706f43; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -12722,6 +12722,12 @@ td .check-container {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none; }
+
+button:focus,
+input:focus,
+select:focus {
+  outline: 0px dotted !important;
+  outline: 0px auto -webkit-focus-ring-color !important; }
 
 @media screen and (max-width: 767px) {
   .profile-box {
